--- a/index.html
+++ b/index.html
@@ -1,12 +1,8 @@
 <!DOCTYPE HTML>
-<!--
-	Prologue by HTML5 UP
-	html5up.net | @n33co
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
+
 <html>
 	<head>
-		<title>Prologue by HTML5 UP</title>
+		<title>The Hindu Education Plus Club</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
@@ -76,14 +72,14 @@
 						<div class="container">
 
 							<header>
-								<h2 class="alt">Hi! I'm <strong>Prologue</strong>, a <a href="http://html5up.net/license">free</a> responsive<br />
-								site template designed by <a href="http://html5up.net">HTML5 UP</a>.</h2>
-								<p>Ligula scelerisque justo sem accumsan diam quis<br />
-								vitae natoque dictum sollicitudin elementum.</p>
+								<h2 class="alt">Hi! We are <strong>The Hindu Education Plus Club</strong>, a student body based in <a href=http://www.vit.ac.in> VIT University. </a>
+								</br> Read on to find more about us.</h2>
+								<p>We are a group of college students in VIT University, Vellore who are passionate about improving the lives of others.
+								</p>
 							</header>
 
 							<footer>
-								<a href="#portfolio" class="button scrolly">Magna Aliquam</a>
+								<a href="#portfolio" class="button scrolly">Read More</a>
 							</footer>
 
 						</div>
@@ -94,13 +90,13 @@
 						<div class="container">
 
 							<header>
-								<h2>Portfolio</h2>
+								<h2>What We Do</h2>
 							</header>
 
-							<p>Vitae natoque dictum etiam semper magnis enim feugiat convallis convallis
-							egestas rhoncus ridiculus in quis risus amet curabitur tempor orci penatibus.
-							Tellus erat mauris ipsum fermentum etiam vivamus eget. Nunc nibh morbi quis
-							fusce hendrerit lacus ridiculus.</p>
+							<p>The Hindu Education Plus Club was launched by “The Hindu”. In its nascent stage, the club is burgeoning with strong will and commendable passion.</p>
+							<p><b>“Be the change you wish to see in the world ” –Mahatma Gandhi</b></p>
+							<p>There is a lot of change, our country ‘needs’ and much more than that, we ‘wish’ to see in it. If only we could bring about a smidgen amount of this change in ourselves, at least the ‘need’ for change would be catered to.
+</p>
 
 							<div class="row">
 								<div class="4u 12u$(mobile)">
