Kinda final. Idk yet. Should I show it to others?

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 							<ul>
 								<li><a href="#top" id="top-link" class="skel-layers-ignoreHref"><span class="icon fa-home">Intro</span></a></li>
 								<li><a href="#portfolio" id="portfolio-link" class="skel-layers-ignoreHref"><span class="icon fa-th">Portfolio</span></a></li>
-								<li><a href="#about" id="about-link" class="skel-layers-ignoreHref"><span class="icon fa-user">About Me</span></a></li>
+								<li><a href="#about" id="about-link" class="skel-layers-ignoreHref"><span class="icon fa-user">About Us</span></a></li>
 								<li><a href="#contact" id="contact-link" class="skel-layers-ignoreHref"><span class="icon fa-envelope">Contact</span></a></li>
 							</ul>
 						</nav>
@@ -53,11 +53,8 @@
 
 					<!-- Social Icons -->
 						<ul class="icons">
-							<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-							<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
-							<li><a href="#" class="icon fa-github"><span class="label">Github</span></a></li>
-							<li><a href="#" class="icon fa-dribbble"><span class="label">Dribbble</span></a></li>
-							<li><a href="#" class="icon fa-envelope"><span class="label">Email</span></a></li>
+							<li><a href="https://www.facebook.com/vitthehindueplusclub/" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
+							<li><a href="mailto:thehindueplusclub@gmail.com" class="icon fa-envelope"><span class="label">Email</span></a></li>
 						</ul>
 
 				</div>
@@ -73,7 +70,7 @@
 
 							<header>
 								<h2 class="alt">Hi! We are <strong>The Hindu Education Plus Club</strong>, a student body based in <a href=http://www.vit.ac.in> VIT University. </a>
-								</br> Read on to find more about us.</h2>
+								</br> Read on to find out more about us.</h2>
 								<p>We are a group of college students in VIT University, Vellore who are passionate about improving the lives of others.
 								</p>
 							</header>
@@ -151,17 +148,12 @@
 						<div class="container">
 
 							<header>
-								<h2>About Me</h2>
+								<h2>The Team</h2>
 							</header>
 
-							<a href="#" class="image featured"><img src="images/pic08.jpg" alt="" /></a>
+							<a href="#" class="image featured"><img src="images/the_team.jpg" alt="" /></a>
 
-							<p>Tincidunt eu elit diam magnis pretium accumsan etiam id urna. Ridiculus
-							ultricies curae quis et rhoncus velit. Lobortis elementum aliquet nec vitae
-							laoreet eget cubilia quam non etiam odio tincidunt montes. Elementum sem
-							parturient nulla quam placerat viverra mauris non cum elit tempus ullamcorper
-							dolor. Libero rutrum ut lacinia donec curae mus vel quisque sociis nec
-							ornare iaculis.</p>
+							<p>We are a vibrant team consisting of members from various years of study at VIT University. The team consists of Publicists, Marketing experts, designers, editors and R&D</p>
 
 						</div>
 					</section>
@@ -174,12 +166,9 @@
 								<h2>Contact</h2>
 							</header>
 
-							<p>Elementum sem parturient nulla quam placerat viverra
-							mauris non cum elit tempus ullamcorper dolor. Libero rutrum ut lacinia
-							donec curae mus. Eleifend id porttitor ac ultricies lobortis sem nunc
-							orci ridiculus faucibus a consectetur. Porttitor curae mauris urna mi dolor.</p>
+							<p>You can reach us anytime by sending us an email or shooting a message on our Facebook page. We usually respond within 48 hours.</p>
 
-							<form method="post" action="#">
+							<!--<form method="post" action="#">
 								<div class="row">
 									<div class="6u 12u$(mobile)"><input type="text" name="name" placeholder="Name" /></div>
 									<div class="6u$ 12u$(mobile)"><input type="text" name="email" placeholder="Email" /></div>
@@ -191,6 +180,11 @@
 									</div>
 								</div>
 							</form>
+							-->
+							<ul class="icons">
+								<li><a href="https://www.facebook.com/vitthehindueplusclub/" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
+								<li><a href="mailto:thehindueplusclub@gmail.com" class="icon fa-envelope"><span class="label">Email</span></a></li>
+							</ul>
 
 						</div>
 					</section>
@@ -202,7 +196,7 @@
 
 				<!-- Copyright -->
 					<ul class="copyright">
-						<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+						<li>&copy; The Hindu Education Plus Club. All rights reserved.</li><li>Designed with <i class="fa fa-heart"></i> by <a href="http://booleanbalaji.in"> Abhishek Balaji </a> with loads of help from : <a href="http://html5up.net">HTML5 UP</a></li>
 					</ul>
 
 			</div>
