--- a/index.html
+++ b/index.html
@@ -152,6 +152,9 @@
 							</header>
 
 							<a href="#" class="image featured"><img src="images/the_team.jpg" alt="" /></a>
+                            <p> The Core Committee 2014-2015</p>
+                            <a href="#" class="image featured"><img src="images/the_board.jpg" alt="" /></a>
+                            <p> The Board 2015-2016</p>
 
 							<p>We are a vibrant team consisting of members from various years of study at VIT University. The team consists of Publicists, Marketing experts, designers, editors and R&D</p>
 
