--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 	<body>
 
 		<!-- Header -->
+		<div id="particles-js"></div>
 			<div id="header">
 
 				<div class="top">
@@ -212,6 +213,30 @@
 			<script src="assets/js/util.js"></script>
 			<!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
 			<script src="assets/js/main.js"></script>
+			<script src="../particles.js"></script>
+			<script src="js/app.js"></script>
+
+			<!-- stats.js -->
+			<script src="js/lib/stats.js"></script>
+			<script>
+			  var count_particles, stats, update;
+			  stats = new Stats;
+			  stats.setMode(0);
+			  stats.domElement.style.position = 'absolute';
+			  stats.domElement.style.left = '0px';
+			  stats.domElement.style.top = '0px';
+			  document.body.appendChild(stats.domElement);
+			  count_particles = document.querySelector('.js-count-particles');
+			  update = function() {
+			    stats.begin();
+			    stats.end();
+			    if (window.pJSDom[0].pJS.particles && window.pJSDom[0].pJS.particles.array) {
+			      count_particles.innerText = window.pJSDom[0].pJS.particles.array.length;
+			    }
+			    requestAnimationFrame(update);
+			  };
+			  requestAnimationFrame(update);
+			</script>
 
 	</body>
 </html>
