--- a/index1.html
+++ b/index1.html
@@ -1,108 +1,242 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="utf-8">
-  <title>particles.js</title>
-  <meta name="description" content="particles.js is a lightweight JavaScript library for creating particles.">
-  <meta name="author" content="Vincent Garreau" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
-  <link rel="stylesheet" media="screen" href="assets/css/style.css">
-  <link rel="stylesheet" media="screen" href="assets/css/main.css">
+<!DOCTYPE HTML>
 
-</head>
-<body>
+<html>
+	<head>
+		<title>The Hindu Education Plus Club</title>
+		<meta charset="utf-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
+		<link rel="stylesheet" href="assets/css/main.css" />
+		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
+		<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
+	</head>
+	<body>
 
-<!-- count particles -->
-<div class="count-particles">
-  <span class="js-count-particles">--</span> particles
-</div>
-<div id="header">
+		<!-- Header -->
+		<div id="particles-js"></div>
+			<div id="header">
 
-  <div class="top">
+				<div class="top">
 
-    <!-- Logo -->
-      <div id="logo">
-        <span class="image avatar48"><img src="images/logo.jpg" alt="" /></span>
-        <h1 id="title">The Hindu Education Plus Club</h1>
-        <p>VIT University</p>
-      </div>
+					<!-- Logo -->
+						<div id="logo">
+							<span class="image avatar48"><img src="images/logo.jpg" alt="" /></span>
+							<h1 id="title">The Hindu Education Plus Club</h1>
+							<p>VIT University</p>
+						</div>
 
-    <!-- Nav -->
-      <nav id="nav">
-        <!--
+					<!-- Nav -->
+						<nav id="nav">
+							<!--
 
-          Prologue's nav expects links in one of two formats:
+								Prologue's nav expects links in one of two formats:
 
-          1. Hash link (scrolls to a different section within the page)
+								1. Hash link (scrolls to a different section within the page)
 
-             <li><a href="#foobar" id="foobar-link" class="icon fa-whatever-icon-you-want skel-layers-ignoreHref"><span class="label">Foobar</span></a></li>
+								   <li><a href="#foobar" id="foobar-link" class="icon fa-whatever-icon-you-want skel-layers-ignoreHref"><span class="label">Foobar</span></a></li>
 
-          2. Standard link (sends the user to another page/site)
+								2. Standard link (sends the user to another page/site)
 
-             <li><a href="http://foobar.tld" id="foobar-link" class="icon fa-whatever-icon-you-want"><span class="label">Foobar</span></a></li>
+								   <li><a href="http://foobar.tld" id="foobar-link" class="icon fa-whatever-icon-you-want"><span class="label">Foobar</span></a></li>
 
-        -->
-        <ul>
-          <li><a href="index.html#top" id="top-link" class="skel-layers-ignoreHref"><span class="icon fa-home">Intro</span></a></li>
-          <li><a href="index.html#portfolio" id="portfolio-link" class="skel-layers-ignoreHref"><span class="icon fa-th">Portfolio</span></a></li>
-          <li><a href="index.html#about" id="about-link" class="skel-layers-ignoreHref"><span class="icon fa-user">About Us</span></a></li>
-          <li><a href="index.html#contact" id="contact-link" class="skel-layers-ignoreHref"><span class="icon fa-envelope">Contact</span></a></li>
-        </ul>
-      </nav>
+							-->
+							<ul>
+								<li><a href="#top" id="top-link" class="skel-layers-ignoreHref"><span class="icon fa-home">Intro</span></a></li>
+								<li><a href="#portfolio" id="portfolio-link" class="skel-layers-ignoreHref"><span class="icon fa-th">Portfolio</span></a></li>
+								<li><a href="#about" id="about-link" class="skel-layers-ignoreHref"><span class="icon fa-user">About Us</span></a></li>
+								<li><a href="#contact" id="contact-link" class="skel-layers-ignoreHref"><span class="icon fa-envelope">Contact</span></a></li>
+							</ul>
+						</nav>
 
-  </div>
+				</div>
 
-  <div class="bottom">
+				<div class="bottom">
 
-    <!-- Social Icons -->
-      <ul class="icons">
-        <li><a href="https://www.facebook.com/vitthehindueplusclub/" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
-        <li><a href="mailto:thehindueplusclub@gmail.com" class="icon fa-envelope"><span class="label">Email</span></a></li>
-      </ul>
+					<!-- Social Icons -->
+						<ul class="icons">
+							<li><a href="https://www.facebook.com/vitthehindueplusclub/" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
+							<li><a href="mailto:thehindueplusclub@gmail.com" class="icon fa-envelope"><span class="label">Email</span></a></li>
+						</ul>
 
-  </div>
+				</div>
 
-</div>
+			</div>
 
-<!-- particles.js container -->
-<div id="particles-js">
-  <a href="index.html">Enter</a>
-</div>
+		<!-- Main -->
+			<div id="main">
 
-<!-- scripts -->
-<script src="particles.js"></script>
-<script src="assets/js/app.js"></script>
+				<!-- Intro -->
+					<section id="top" class="one dark cover">
+						<div class="container">
 
-<!-- stats.js -->
-<script src="assets/js/lib/stats.js"></script>
-<script>
-  var count_particles, stats, update;
-  stats = new Stats;
-  stats.setMode(0);
-  stats.domElement.style.position = 'absolute';
-  stats.domElement.style.left = '0px';
-  stats.domElement.style.top = '0px';
-  document.body.appendChild(stats.domElement);
-  count_particles = document.querySelector('.js-count-particles');
-  update = function() {
-    stats.begin();
-    stats.end();
-    if (window.pJSDom[0].pJS.particles && window.pJSDom[0].pJS.particles.array) {
-      count_particles.innerText = window.pJSDom[0].pJS.particles.array.length;
-    }
-    requestAnimationFrame(update);
-  };
-  requestAnimationFrame(update);
-</script>
-<!-- Footer -->
-  <div id="footer">
+							<header>
+								<h2 class="alt">Hi! We are <strong>The Hindu Education Plus Club</strong>, a student body based in <a href=http://www.vit.ac.in> VIT University. </a>
+								</br> Read on to find out more about us.</h2>
+								<p>We are a group of college students in VIT University, Vellore who are passionate about improving the lives of others.
+								</p>
+							</header>
 
-    <!-- Copyright -->
-      <ul class="copyright">
-        <li>&copy; The Hindu Education Plus Club. All rights reserved.</li><li>Designed with <i class="fa fa-heart"></i> by <a href="http://booleanbalaji.in"> Abhishek Balaji </a> with loads of help from : <a href="http://html5up.net">HTML5 UP</a></li>
-      </ul>
+							<footer>
+								<a href="#portfolio" class="button scrolly">Read More</a>
+							</footer>
 
-  </div>
+						</div>
+					</section>
 
-</body>
+				<!-- Portfolio -->
+					<section id="portfolio" class="two">
+						<div class="container">
+
+							<header>
+								<h2>What We Do</h2>
+							</header>
+
+							<p>The Hindu Education Plus Club was launched by “The Hindu”. In its nascent stage, the club is burgeoning with strong will and commendable passion.</p>
+							<p><b>“Be the change you wish to see in the world ” –Mahatma Gandhi</b></p>
+							<p>There is a lot of change, our country ‘needs’ and much more than that, we ‘wish’ to see in it. If only we could bring about a smidgen amount of this change in ourselves, at least the ‘need’ for change would be catered to.
+</p>
+
+							<div class="row">
+								<div class="4u 12u$(mobile)">
+									<article class="item">
+										<a href="#" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
+										<header>
+											<h3>Teaching basic Tamil to help everyone.</h3>
+										</header>
+									</article>
+									<article class="item">
+										<a href="#" class="image fit"><img src="images/pic03.jpg" alt="" /></a>
+										<header>
+											<h3>Information Seminars on GMAT, GRE, NMAT, CAT and more.</h3>
+										</header>
+									</article>
+								</div>
+								<div class="4u 12u$(mobile)">
+									<article class="item">
+										<a href="#" class="image fit"><img src="images/quiz.jpg" alt="" /></a>
+										<header>
+											<h3>India Unravelled Quiz</h3>
+										</header>
+									</article>
+									<article class="item">
+										<a href="#" class="image fit"><img src="images/word.jpg" alt="" /></a>
+										<header>
+											<h3>Participants at the Word Brawl event</h3>
+										</header>
+									</article>
+								</div>
+								<div class="4u$ 12u$(mobile)">
+									<article class="item">
+										<a href="#" class="image fit"><img src="images/decoding.jpg" alt="" /></a>
+										<header>
+											<h3>Winners of Decoding India</h3>
+										</header>
+									</article>
+									<article class="item">
+										<a href="#" class="image fit"><img src="images/session.jpg" alt="" /></a>
+										<header>
+											<h3>Participants at one of the renaissance sessions</h3>
+										</header>
+									</article>
+								</div>
+							</div>
+
+						</div>
+					</section>
+
+				<!-- About Me -->
+					<section id="about" class="three">
+						<div class="container">
+
+							<header>
+								<h2>The Team</h2>
+							</header>
+
+							<a href="#" class="image featured"><img src="images/the_team.jpg" alt="" /></a>
+                            <p> The Core Committee 2014-2015</p>
+                            <a href="#" class="image featured"><img src="images/the_board.jpg" alt="" /></a>
+                            <p> The Board 2015-2016</p>
+
+							<p>We are a vibrant team consisting of members from various years of study at VIT University. The team consists of Publicists, Marketing experts, designers, editors and R&D</p>
+
+						</div>
+					</section>
+
+				<!-- Contact -->
+					<section id="contact" class="four">
+						<div class="container">
+
+							<header>
+								<h2>Contact</h2>
+							</header>
+
+							<p>You can reach us anytime by sending us an email or shooting a message on our Facebook page. We usually respond within 48 hours.</p>
+
+							<!--<form method="post" action="#">
+								<div class="row">
+									<div class="6u 12u$(mobile)"><input type="text" name="name" placeholder="Name" /></div>
+									<div class="6u$ 12u$(mobile)"><input type="text" name="email" placeholder="Email" /></div>
+									<div class="12u$">
+										<textarea name="message" placeholder="Message"></textarea>
+									</div>
+									<div class="12u$">
+										<input type="submit" value="Send Message" />
+									</div>
+								</div>
+							</form>
+							-->
+							<ul class="icons">
+								<li><a href="https://www.facebook.com/vitthehindueplusclub/" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
+								<li><a href="mailto:thehindueplusclub@gmail.com" class="icon fa-envelope"><span class="label">Email</span></a></li>
+							</ul>
+
+						</div>
+					</section>
+
+			</div>
+
+		<!-- Footer -->
+			<div id="footer">
+
+				<!-- Copyright -->
+					<ul class="copyright">
+						<li>&copy; The Hindu Education Plus Club. All rights reserved.</li><li>Designed with <i class="fa fa-heart"></i> by <a href="http://booleanbalaji.in"> Abhishek Balaji </a> with loads of help from : <a href="http://html5up.net">HTML5 UP</a></li>
+					</ul>
+
+			</div>
+
+		<!-- Scripts -->
+			<script src="assets/js/jquery.min.js"></script>
+			<script src="assets/js/jquery.scrolly.min.js"></script>
+			<script src="assets/js/jquery.scrollzer.min.js"></script>
+			<script src="assets/js/skel.min.js"></script>
+			<script src="assets/js/util.js"></script>
+			<!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
+			<script src="assets/js/main.js"></script>
+			<script src="../particles.js"></script>
+			<script src="js/app.js"></script>
+
+			<!-- stats.js -->
+			<script src="js/lib/stats.js"></script>
+			<script>
+			  var count_particles, stats, update;
+			  stats = new Stats;
+			  stats.setMode(0);
+			  stats.domElement.style.position = 'absolute';
+			  stats.domElement.style.left = '0px';
+			  stats.domElement.style.top = '0px';
+			  document.body.appendChild(stats.domElement);
+			  count_particles = document.querySelector('.js-count-particles');
+			  update = function() {
+			    stats.begin();
+			    stats.end();
+			    if (window.pJSDom[0].pJS.particles && window.pJSDom[0].pJS.particles.array) {
+			      count_particles.innerText = window.pJSDom[0].pJS.particles.array.length;
+			    }
+			    requestAnimationFrame(update);
+			  };
+			  requestAnimationFrame(update);
+			</script>
+
+	</body>
 </html>
