--- a/index.html
+++ b/index.html
@@ -98,6 +98,7 @@
   <div id="footer">
 
     <!-- Copyright -->
+    <a href=index1.html class="button scrolly">Enter</a>
       <ul class="copyright">
         <li>&copy; The Hindu Education Plus Club. All rights reserved.</li><li>Designed with <i class="fa fa-heart"></i> by <a href="http://booleanbalaji.in"> Abhishek Balaji </a> with loads of help from : <a href="http://html5up.net">HTML5 UP</a></li>
       </ul>
